Quiz intro hidden when password is required

--- a/README
+++ b/README
@@ -30,7 +30,8 @@ attempt.php
 show previous questions and show correct values values to display the correct response after answering
 - Take into account the spent nattempts
 - Take into account the penalty
-- Check the page the user tries to access 
+- Check the page the user tries to access
+- Hide quiz question when asking for password 
 
 db/install.xml
 - New tables
