--- a/README
+++ b/README
@@ -62,6 +62,7 @@ review.php
 - Page links hidden
 - Redirect to the last page to display all the questions on the same page
 - Show correct responses
+- Add the guided quiz intro 
 
 view.php
 - Don't show the quiz main question until the attempt begins
