Changing again the name to guided quiz

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ##
-# Moodle - Modules - Sections quiz
+# Moodle - Modules - Guided quiz
 #
 # Core quiz module modified to display questions sequentially
 #
